--- a/css/agora.css
+++ b/css/agora.css
@@ -52,7 +52,7 @@
     width: 50%;
     height: 100%;
     font-size: 1.5rem; }
-  .menuNavegacion__eventos, .menuNavegacion__filtrar, .menuNavegacion__hemeroteca, .menuNavegacion__crear {
+  .menuNavegacion__sedes, .menuNavegacion__filtrar, .menuNavegacion__hemeroteca, .menuNavegacion__crear {
     display: none; }
   .menuNavegacion__botonMenu {
     width: 50%;
@@ -114,9 +114,6 @@
   .botonMenu span:nth-of-type(3) {
     top: 18px; }
 
-.icon-a-logo {
-  color: var(--anaranjado); }
-
 .icono--menu {
   color: var(--profundo);
   width: 100%; }
@@ -160,19 +157,19 @@
       height: 100%;
       font-size: 1.5rem;
       padding-top: 0.5rem; }
-    .menuNavegacion__eventos {
-      grid-column: 1/2;
-      grid-row: 2; }
     .menuNavegacion__filtrar {
       grid-column: 1/2;
-      grid-row: 3; }
+      grid-row: 2; }
     .menuNavegacion__hemeroteca {
+      grid-column: 1/2;
+      grid-row: 3; }
+    .menuNavegacion__sedes {
       grid-column: 1/2;
       grid-row: 4; }
     .menuNavegacion__crear {
       grid-column: 1/2;
       grid-row: 5; }
-    .menuNavegacion__eventos, .menuNavegacion__filtrar, .menuNavegacion__hemeroteca, .menuNavegacion__crear {
+    .menuNavegacion__sedes, .menuNavegacion__filtrar, .menuNavegacion__hemeroteca, .menuNavegacion__crear {
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
@@ -215,8 +212,6 @@
       align-items: center;
       width: 100%;
       height: 100%; }
-    .menuNavegacion .icon-a-logo {
-      color: var(--profundo); }
     .menuNavegacion .displayVisible {
       visibility: visible;
       -webkit-transition: 2s;
@@ -256,11 +251,7 @@
   -webkit-transition: top 1.5s;
   -o-transition: top 1.5s;
   transition: top 1.5s; }
-  .menuNavegacionExtendida__logo {
-    display: none; }
-  .menuNavegacionExtendida__crear {
-    cursor: pointer; }
-  .menuNavegacionExtendida__eventos, .menuNavegacionExtendida__filtrar, .menuNavegacionExtendida__hemeroteca, .menuNavegacionExtendida__crear, .menuNavegacionExtendida__faseBeta {
+  .menuNavegacionExtendida__filtrar, .menuNavegacionExtendida__hemeroteca, .menuNavegacionExtendida__sedes, .menuNavegacionExtendida__crear, .menuNavegacionExtendida__faseBeta {
     width: 100%;
     padding: 1rem;
     display: -webkit-box;
@@ -280,22 +271,28 @@
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
-    color: var(--anaranjado);
     font-size: 1rem;
+    color: var(--oxford);
+    font-weight: 300; }
+  .menuNavegacionExtendida__texto {
+    text-align: left; }
+  .menuNavegacionExtendida__logo {
+    display: none; }
+  .menuNavegacionExtendida__crear {
+    cursor: pointer;
+    color: var(--anaranjado);
     font-weight: 400; }
-  .menuNavegacionExtendida__filtrar {
-    color: var(--oxford);
-    font-weight: 300; }
-  .menuNavegacionExtendida__hemeroteca {
-    color: var(--oxford);
-    font-weight: 300; }
   .menuNavegacionExtendida__linea {
     display: initial;
     background-color: var(--ahuesado);
     width: 100%;
     height: 1px; }
-  .menuNavegacionExtendida__texto {
-    text-align: left; }
+  .menuNavegacionExtendida__faseBeta {
+    cursor: default;
+    color: var(--anaranjado);
+    font-weight: 400; }
+  .menuNavegacionExtendida__faseBeta p {
+    cursor: pointer; }
 
 .nav--activo {
   top: 3rem;
@@ -326,20 +323,7 @@
       display: initial;
       width: 100%;
       padding: 0 4.5rem; }
-    .menuNavegacionExtendida__eventos {
-      grid-column: 1/2;
-      grid-row: 2/3; }
-    .menuNavegacionExtendida__filtrar {
-      grid-column: 1/2;
-      grid-row: 3/4; }
-    .menuNavegacionExtendida__hemeroteca {
-      grid-column: 1/2;
-      grid-row: 4/5; }
-    .menuNavegacionExtendida__crear {
-      grid-column: 1/2;
-      grid-row: 5/6;
-      border-bottom: 1px var(--ahuesadoTransparente) solid; }
-    .menuNavegacionExtendida__eventos, .menuNavegacionExtendida__filtrar, .menuNavegacionExtendida__hemeroteca, .menuNavegacionExtendida__crear, .menuNavegacionExtendida__faseBeta {
+    .menuNavegacionExtendida__sedes, .menuNavegacionExtendida__filtrar, .menuNavegacionExtendida__hemeroteca, .menuNavegacionExtendida__crear, .menuNavegacionExtendida__faseBeta {
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
@@ -358,11 +342,24 @@
       align-content: center;
       width: 100%;
       height: 100%;
-      color: var(--blanco); }
-    .menuNavegacionExtendida__eventos, .menuNavegacionExtendida__filtrar, .menuNavegacionExtendida__hemeroteca, .menuNavegacionExtendida__crear {
-      border-top: 1px var(--ahuesadoTransparente) solid;
-      font-size: 1.5rem;
+      color: var(--blanco);
       font-weight: 100; }
+    .menuNavegacionExtendida__sedes, .menuNavegacionExtendida__filtrar, .menuNavegacionExtendida__hemeroteca, .menuNavegacionExtendida__crear {
+      border-top: 1px var(--ahuesadoTransparente) solid;
+      font-size: 1.5rem; }
+    .menuNavegacionExtendida__filtrar {
+      grid-column: 1/2;
+      grid-row: 2/3; }
+    .menuNavegacionExtendida__hemeroteca {
+      grid-column: 1/2;
+      grid-row: 3/4; }
+    .menuNavegacionExtendida__sedes {
+      grid-column: 1/2;
+      grid-row: 4/5; }
+    .menuNavegacionExtendida__crear {
+      grid-column: 1/2;
+      grid-row: 5/6;
+      border-bottom: 1px var(--ahuesadoTransparente) solid; }
     .menuNavegacionExtendida__linea {
       display: none; }
     .menuNavegacionExtendida__faseBeta {
@@ -372,8 +369,10 @@
       -webkit-justify-content: flex-end;
       -ms-flex-pack: end;
       justify-content: flex-end;
-      padding: 0;
-      font-weight: 100; }
+      padding: 0; }
+    .menuNavegacionExtendida__crear:hover,
+    .menuNavegacionExtendida__faseBeta > p:hover {
+      font-weight: 300; }
     .menuNavegacionExtendida__icon {
       display: none; }
     .menuNavegacionExtendida__texto {
@@ -536,6 +535,7 @@
   .tarjeta__tipoEvento > i:hover {
     color: var(--melon); }
   .tarjeta__imagenEvento {
+    display: none;
     grid-column: 1/3;
     grid-row: 2;
     border-radius: 3px;
@@ -570,6 +570,9 @@
     grid-row: 4;
     font-size: 80%;
     display: none; }
+  @media (min-width: 576px) {
+    .tarjeta__imagenEvento {
+      display: initial; } }
 
 .artistico {
   color: var(--artistico); }
@@ -609,17 +612,7 @@
   z-index: 20;
   top: 0;
   right: 0;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto auto;
-  overflow-y: auto;
-  padding: 1.5rem 5%;
   background-color: var(--profundoTransparente); }
-  @media (min-width: 992px) {
-    .modal__contenedor {
-      padding: 1rem 5%;
-      grid-template-columns: 70% 30%;
-      grid-template-rows: auto; } }
 
 .modal__displayNone {
   display: none; }
@@ -630,16 +623,16 @@
   right: 0.5rem;
   z-index: 8;
   height: 2rem;
-  background-color: var(--profundo);
   color: var(--blanco);
   border: transparent;
-  border-radius: 0 0 4px 4px; }
+  border-radius: 0 0 4px 4px;
+  cursor: pointer;
+  background-color: transparent; }
   @media (min-width: 576px) {
     .modal__cerrar {
       width: 4rem;
       right: 0.5rem;
-      top: 0.5rem;
-      background-color: transparent; } }
+      top: 0.5rem; } }
   @media (min-width: 820px) {
     .modal__cerrar {
       right: 1rem;
@@ -651,288 +644,9 @@
     .modal__cerrar {
       right: 1.5rem; } }
 
-.modal__informacion {
+.modal__index {
   width: 100%;
-  height: 100%;
-  grid-column: 1/2;
-  grid-row: 1/2;
-  background-color: var(--ahuesado); }
-  @media (min-width: 992px) {
-    .modal__informacion {
-      grid-column: 1/2;
-      grid-row: 1/2; } }
-
-.modal__portada {
-  width: 100%;
-  height: auto;
-  background-color: var(--profundo);
-  background: url("../images/landing_portada_moviles.jpg") no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-flow: column;
-  -ms-flex-flow: column;
-  flex-flow: column;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  color: var(--blanco);
-  text-align: center; }
-  @media (min-width: 820px) {
-    .modal__portada {
-      height: 80vh;
-      padding: 10%;
-      font-weight: 300; } }
-
-.modal__logo {
-  width: 80%;
-  padding-bottom: 1rem; }
-  @media (min-width: 820px) {
-    .modal__logo {
-      width: 40%; } }
-
-.modal__portada h3 {
-  font-weight: 400; }
-
-.modal__linea {
-  width: 80%; }
-
-.modal__linea div {
-  margin: 0.5rem 0;
-  background-color: var(--ahuesadoTransparente);
-  height: 1px;
-  width: 90%; }
-
-.modal__portada h5 {
-  font-weight: 300; }
-
-.modal__datosEvento {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 50% 50%;
-  width: 100%;
-  height: auto;
-  background-color: var(--ceniza); }
-  @media (min-width: 820px) {
-    .modal__datosEvento {
-      grid-template-columns: 50% 50%;
-      grid-template-rows: 1fr;
-      padding: 1rem; } }
-
-.modal__datosInformacion {
-  grid-column: 1/2;
-  grid-row: 2/3; }
-  @media (min-width: 820px) {
-    .modal__datosInformacion {
-      grid-column: 1/2;
-      grid-row: 1/2; } }
-
-.modal__datosImagen {
-  grid-column: 1/2;
-  grid-row: 1/2;
-  padding: 0 40%; }
-  @media (min-width: 820px) {
-    .modal__datosImagen {
-      grid-column: 2/3;
-      grid-row: 1/2; } }
-
-.modal__politicas {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 50% 50%;
-  width: 100%;
-  height: auto;
-  background-color: var(--marfil); }
-  @media (min-width: 820px) {
-    .modal__politicas {
-      grid-template-columns: 50% 50%;
-      grid-template-rows: 1fr;
-      padding: 1rem; } }
-
-.modal__politicasInformacion {
-  grid-column: 1/2;
-  grid-row: 2/3; }
-  @media (min-width: 820px) {
-    .modal__politicasInformacion {
-      grid-column: 2/3;
-      grid-row: 1/2; } }
-
-.modal__politicasImagen {
-  grid-column: 1/2;
-  grid-row: 1/2;
-  padding: 0 40%; }
-  @media (min-width: 820px) {
-    .modal__politicasImagen {
-      grid-column: 1/2;
-      grid-row: 1/2; } }
-
-.modal__pie {
-  width: 100%;
-  background-color: var(--navy);
-  color: var(--ahuesado);
-  text-align: center; }
-
-.modal__pie p {
-  font-size: 60%; }
-
-.modal__mediosDeContacto {
-  width: 100%;
-  height: 100%;
-  background-color: var(--blanco);
-  grid-column: 1/2;
-  grid-row: 2/3; }
-  @media (min-width: 992px) {
-    .modal__mediosDeContacto {
-      grid-column: 2/3;
-      grid-row: 1/2; } }
-
-.modal__sticker {
-  position: relative;
-  margin: 0.5rem;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(4, auto); }
-  @media (min-width: 576px) {
-    .modal__sticker {
-      grid-template-columns: 50% 50%;
-      grid-template-rows: repeat(3, auto); } }
-  @media (min-width: 820px) {
-    .modal__sticker {
-      position: -webkit-sticky;
-      position: sticky;
-      top: 0;
-      margin: 1rem 0.5rem; } }
-  @media (min-width: 992px) {
-    .modal__sticker {
-      grid-template-columns: 1fr;
-      grid-template-rows: repeat(4, auto);
-      margin: 1rem; } }
-
-.modal__sticker p {
-  line-height: 1;
-  font-weight: 300;
-  grid-column: 1/2;
-  grid-row: 1/2; }
-  @media (min-width: 576px) {
-    .modal__sticker p {
-      grid-column: 1/3;
-      grid-row: 1/2; } }
-  @media (min-width: 992px) {
-    .modal__sticker p {
-      grid-column: 1/2;
-      grid-row: 1/2; } }
-
-.modal__correoWeb, .modal__facebook, .modal__formulario {
-  display: grid;
-  grid-template-columns: 30% 70%;
-  grid-template-rows: 1fr 1fr;
-  margin-top: 0.5rem; }
-  @media (min-width: 576px) {
-    .modal__correoWeb, .modal__facebook, .modal__formulario {
-      grid-template-columns: 1fr;
-      grid-template-rows: auto auto auto;
-      margin-top: 1rem; } }
-  @media (min-width: 992px) {
-    .modal__correoWeb, .modal__facebook, .modal__formulario {
-      grid-template-columns: 30% 70%;
-      grid-template-rows: 1fr 1fr;
-      margin-top: 1.5rem; } }
-
-.modal__icono {
-  grid-column: 1/2;
-  grid-row: 1/4;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-flow: column;
-  -ms-flex-flow: column;
-  flex-flow: column;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  padding-right: 0.5rem; }
-  @media (min-width: 576px) {
-    .modal__icono {
-      grid-column: 1/2;
-      grid-row: 1/2;
-      width: 50%; } }
-  @media (min-width: 992px) {
-    .modal__icono {
-      padding-right: 1rem;
-      grid-column: 1/2;
-      grid-row: 1/4;
-      width: 100%; } }
-
-.modal__medio {
-  grid-column: 2/3;
-  grid-row: 1/2;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  font-weight: 400; }
-  @media (min-width: 576px) {
-    .modal__medio {
-      grid-column: 1/2;
-      grid-row: 2/3; } }
-  @media (min-width: 992px) {
-    .modal__medio {
-      grid-column: 2/3;
-      grid-row: 1/2; } }
-
-.modal__linkMedio {
-  grid-column: 2/3;
-  grid-row: 2/3;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  color: var(--profundo);
-  text-align: justify;
-  text-justify: inter-word;
-  font-weight: 300; }
-  @media (min-width: 576px) {
-    .modal__linkMedio {
-      grid-column: 1/2;
-      grid-row: 3/4; } }
-  @media (min-width: 992px) {
-    .modal__linkMedio {
-      grid-column: 2/3;
-      grid-row: 2/3; } }
+  height: 100%; }
 
 /* -------- 1 --------*/
 /* -------- 1 --------*/
