--- a/scss/index/_menu_navegacion.scss
+++ b/scss/index/_menu_navegacion.scss
@@ -24,7 +24,7 @@
 		font-size: 1.5rem;	
 	}
 
-	&__eventos,
+	&__sedes,
 	&__filtrar, 
 	&__hemeroteca, 
 	&__crear,  {
@@ -45,10 +45,6 @@
 
 /* -------- Botón Menú --------*/
 @import "_boton_menu.scss";
-
-.icon-a-logo {
-	color: var(--anaranjado);
-}
 
 .icono--menu  {
 	color: var(--profundo);
@@ -91,17 +87,17 @@
 			padding-top: 0.5rem;
 		}
 
-		&__eventos {
+		&__filtrar {
 			grid-column: 1/2;
 			grid-row: 2;
 		}
 
-		&__filtrar {
+		&__hemeroteca {
 			grid-column: 1/2;
 			grid-row: 3;
 		}
 
-		&__hemeroteca  {
+		&__sedes  {
 			grid-column: 1/2;
 			grid-row: 4;
 		}
@@ -111,7 +107,7 @@
 			grid-row: 5;
 		}
 
-		&__eventos,
+		&__sedes,
 		&__filtrar, 
 		&__hemeroteca, 
 		&__crear  {
@@ -135,10 +131,6 @@
 			width: 100%;
 			height: 100%;
 	    }
-
-	    .icon-a-logo {
-			color: var(--profundo);
-		}
 
 	    .displayVisible {
 			visibility: visible;
