--- a/scss/index/_menu_navegacion_extendida.scss
+++ b/scss/index/_menu_navegacion_extendida.scss
@@ -16,19 +16,9 @@
 	z-index: 8;
 	transition: top 1.5s;
 
-	&__logo {
-		display: none;
-	}
-
-	&__eventos {}
-
-	&__crear {
-		cursor: pointer;
-	}
-
-	&__eventos,
 	&__filtrar,
 	&__hemeroteca,
+	&__sedes,
 	&__crear,
 	&__faseBeta {
 		width: 100%;
@@ -37,19 +27,27 @@
 		flex-flow: row;
 		justify-content: flex-start;
 		align-items: center;
-		color: var(--anaranjado);
 		font-size: 1rem;
+		color: var(--oxford);
+		font-weight: 300;
+	}
+
+	&__texto {
+		text-align: left;
+	}
+
+	&__logo {
+		display: none;
+	}
+
+	&__filtrar {}
+	&__hemeroteca {}
+	&__sedes {}
+
+	&__crear {
+		cursor: pointer;
+		color: var(--anaranjado);
 		font-weight: 400;
-	}
-
-	&__filtrar {
-		color: var(--oxford);
-		font-weight: 300;
-	}
-
-	&__hemeroteca {
-		color: var(--oxford);
-		font-weight: 300;
 	}
 
 	&__linea {
@@ -59,8 +57,14 @@
 		height: 1px;
 	}
 
-	&__texto {
-		text-align: left;
+	&__faseBeta {
+		cursor: default;
+		color: var(--anaranjado);
+		font-weight: 400;
+	}
+
+	&__faseBeta p {
+		cursor: pointer;
 	}
 }
 
@@ -93,28 +97,7 @@
 			padding: 0 4.5rem;	
 		}
 
-		&__eventos {
-			grid-column: 1/2;
-			grid-row: 2/3;
-		}
-
-		&__filtrar {
-			grid-column: 1/2;
-			grid-row: 3/4;
-		}
-
-		&__hemeroteca {
-			grid-column: 1/2;
-			grid-row: 4/5;
-		}
-
-		&__crear {
-			grid-column: 1/2;
-			grid-row: 5/6;
-			border-bottom: 1px var(--ahuesadoTransparente) solid;
-		}
-
-		&__eventos, 
+		&__sedes, 
 		&__filtrar, 
 		&__hemeroteca, 
 		&__crear,
@@ -126,15 +109,36 @@
 			width: 100%;
 			height: 100%;
 			color: var(--blanco);
+			font-weight: 100;
 		}
 		
-		&__eventos, 
+		&__sedes, 
 		&__filtrar, 
 		&__hemeroteca, 
 		&__crear {
 			border-top: 1px var(--ahuesadoTransparente) solid;
 			font-size: 1.5rem;
-			font-weight: 100;
+		}
+
+		&__filtrar {
+			grid-column: 1/2;
+			grid-row: 2/3;
+		}
+
+		&__hemeroteca {
+			grid-column: 1/2;
+			grid-row: 3/4;
+		}
+
+		&__sedes {
+			grid-column: 1/2;
+			grid-row: 4/5;
+		}
+
+		&__crear {
+			grid-column: 1/2;
+			grid-row: 5/6;
+			border-bottom: 1px var(--ahuesadoTransparente) solid;
 		}
 
 		&__linea {
@@ -146,7 +150,11 @@
 			grid-row: 6/7;
 			justify-content: flex-end;
 			padding: 0;
-			font-weight: 100;
+		}
+
+		&__crear:hover,
+		&__faseBeta > p:hover {
+			font-weight: 300;
 		}
 
 		&__icon {
