--- a/scss/index/_tarjetas.scss
+++ b/scss/index/_tarjetas.scss
@@ -77,6 +77,7 @@
 
 
 	&__imagenEvento {
+		display: none;
 		grid-column: 1/3;
 		grid-row: 2;
 		border-radius: 3px;
@@ -123,8 +124,14 @@
 		display: none;
 	}
 
-	@include sm{}
+	@include sm{
+		&__imagenEvento {
+			display: initial;
+		}
+	}
+	
 	@include md{}
+
 	@include lg{}
 	@include xl{}
 }
