--- a/css/agora.css
+++ b/css/agora.css
@@ -486,7 +486,26 @@
       left: 0;
       padding: 1rem; } }
 
-.tarjeta__tipoEvento,
+.tarjeta__fechaEvento,
+.tarjeta__tipoEvento > a {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start; }
+
 .tarjeta__imagenEvento,
 .tarjeta__linea,
 .tarjeta__redesEvento {
@@ -520,7 +539,7 @@
     margin: 0.5rem 0 1rem;
     grid-template-columns: 90% 10%;
     grid-template-rows: auto auto auto auto;
-    grid-gap: 4px; }
+    grid-gap: 2px; }
   .tarjeta__fechaEvento {
     grid-column: 1/2;
     grid-row: 1;
@@ -531,8 +550,10 @@
   .tarjeta__tipoEvento {
     grid-column: 2/3;
     grid-row: 1;
-    font-size: 80%; }
-  .tarjeta__tipoEvento > i:hover {
+    font-size: 90%; }
+  .tarjeta__tipoEvento > a {
+    color: var(--profundo); }
+  .tarjeta__tipoEvento > a:hover {
     color: var(--melon); }
   .tarjeta__imagenEvento {
     display: none;
@@ -556,12 +577,13 @@
     font-weight: 700;
     font-size: 80%;
     color: var(--a);
-    line-height: 1.2; }
+    line-height: 1.2;
+    margin-top: 0.25rem; }
   .tarjeta__sedeEvento {
     grid-column: 1/3;
     grid-row: 4;
     font-weight: 400;
-    font-size: 80%;
+    font-size: 70%;
     color: var(--b);
     text-align: left;
     line-height: 1; }
