--- a/scss/index/_tarjetas.scss
+++ b/scss/index/_tarjetas.scss
@@ -23,8 +23,14 @@
 	}
 }
 
-// .tarjeta__fechaEvento,
-.tarjeta__tipoEvento,
+.tarjeta__fechaEvento,
+.tarjeta__tipoEvento > a {
+	display: flex;
+	flex-flow: column;
+	justify-content: flex-end;
+	align-items: flex-start;
+}
+
 .tarjeta__imagenEvento,
 .tarjeta__linea,
 // .tarjeta__nombreEvento,
@@ -53,7 +59,7 @@
 		margin: 0.5rem 0 1rem;
 		grid-template-columns: 90% 10%;
 		grid-template-rows: auto auto auto auto;
-		grid-gap: 4px;
+		grid-gap: 2px;
 	}
 
 	&__fechaEvento {
@@ -68,10 +74,14 @@
 	&__tipoEvento {
 		grid-column: 2/3;
 		grid-row: 1;
-		font-size: 80%;
+		font-size: 90%;
 	}
 
-	&__tipoEvento > i:hover {
+	&__tipoEvento > a {
+		color: var(--profundo);
+	}
+
+	&__tipoEvento > a:hover {
 		color: var(--melon);
 	}
 
@@ -105,13 +115,14 @@
 		font-size: 80%;
 		color: var(--a);
 		line-height: 1.2;
+		margin-top: 0.25rem;
 	}
 
 	&__sedeEvento {
 		grid-column: 1/3;
 		grid-row: 4;
 		font-weight: 400;
-		font-size: 80%;
+		font-size: 70%;
 		color: var(--b);
 		text-align: left;
 		line-height: 1;
